# -Docker-C-Qt

./: CMakeLists.txt  Dockerfile  main.cpp  readme
test/test1/src/: CMakeLists.txt  Dockerfile  main.cpp
test/test2/src/: CMakeLists.txt  Dockerfile  main.cpp  pre-install.sh
